Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-11730

Memory leak in innodb.innodb_corrupt_bit

    XMLWordPrintable

Details

    Description

      The function ha_innobase::prepare_inplace_alter_table() is failing to call mem_heap_free(heap) when it notices that a secondary index is corrupted.
      The memory leak is noticed by AddressSanitizer when running the test innodb.innodb_corrupt_bit.

      Attachments

        Activity

          People

            marko Marko Mäkelä
            marko Marko Mäkelä
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - 1h
                1h
                Remaining:
                Remaining Estimate - 1h
                1h
                Logged:
                Time Spent - Not Specified
                Not Specified

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.